Fix flex-wrap layout when mobile - order

--- a/assets/stylesheets/pages/index.scss
+++ b/assets/stylesheets/pages/index.scss
@@ -24,6 +24,12 @@ $ev-index__cell-padding: 25px;
   flex-wrap: wrap;
 }
 
+.ev-index__section--reverse {
+  @media(max-width: mdc-layout-grid-breakpoint-max('phone')) {
+    flex-direction: column-reverse;
+  }
+}
+
 .ev-index__section-cell {
   width: calc(50% - #{$ev-index__cell-padding*2});
   padding: 100px $ev-index__cell-padding;
